linted code, changed buildingPattern signature, colorized building in placement